[package]
name = "epicycle_shape_similarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
maplit = "1.0.2"
nannou = "0.19.0"
num-traits = "0.2.18"
regex = "1.10.3"
rustfft = "6.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
